--- a/mysite/templates/blog/post_list.html
+++ b/mysite/templates/blog/post_list.html
@@ -1,28 +1,56 @@
-{% block content %}
-    <h1>Список постов</h1>
-    <ul>
-        {% for post in page_posts %}
-            <li>
-                {{ post.title }} ({{ post.created_at }})
-                <p>{{ post.content }}</p>
-            </li>
-        {% empty %}
-            <p>Нет постов.</p>
-        {% endfor %}
-    </ul>
-    <!-- показываем пагинатор -->
-    <div class="pagination">
-        <p>Страницы:</p>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+
+        <meta charset="UTF-8">
+        <title></title>
+
+</head>
+<body>
+        {% block content %}
+
+<!--        {% include 'blog/pagination.html' with page_posts=page_posts %}-->
+        <form method="GET">
+            <label for="items_per_page">Элементов на странице:</label>
+            <select id="items_per_page" name="items_per_page" onchange="this.form.submit()">
+                <option value="5" {% if items_per_page == 5 %}selected{% endif %}>5</option>
+                <option value="10" {% if items_per_page == 10 %}selected{% endif %}>10</option>
+                <option value="20" {% if items_per_page == 20 %}selected{% endif %}>20</option>
+                <!-- Add more options as needed -->
+            </select>
+        </form>
+
+        <h1>Список постов</h1>
         <ul>
-            {% if page_posts.has_previous %}
-                <li><a href="?page=1"><<</a></li>
-                <li><a href="?page={{ page_posts.previous_page_number }}">Previous</a></li>
-            {% endif %}
-            <li>{{ page_posts.number }}/{{ paginator.num_pages }}</li>
-            {% if page_posts.has_next %}
-                <li><a href="?page={{ page_posts.next_page_number }}">Next</a></li>
-                <li><a href="?page={{ paginator.num_pages }}">>>></a></li>
-            {% endif %}
+            {% for post in page_posts %}
+                <li>
+                    {{ post.title }} ({{ post.created_at }})
+                    <p>{{ post.content }}</p>
+                </li>
+            {% empty %}
+                <p>Нет постов.</p>
+            {% endfor %}
         </ul>
-    </div>
-{% endblock %}
+
+        <!-- показываем пагинатор -->
+        <div class="pagination">
+            <p>Страницы:</p>
+            <ul>
+                {% if page_posts.has_previous %}
+
+                    <li><a href="?page=1"><<</a></li>
+
+                    <li><a href="?page={{ page_posts.previous_page_number }}">Previous</a></li>
+                {% endif %}
+                <li>{{ page_posts.number }}/{{ paginator.num_pages }}</li>
+                {% if page_posts.has_next %}
+                    <li><a href="?page={{ page_posts.next_page_number }}">Next</a></li>
+                    <li><a href="?page={{ paginator.num_pages }}">>>></a></li>
+                {% endif %}
+            </ul>
+        </div>
+        {% include 'blog/pagination.html' with page_posts=page_posts %}
+    {% endblock %}
+
+</body>
+</html>
