--- a/mysite/templates/blog/pagination.html
+++ b/mysite/templates/blog/pagination.html
@@ -1,13 +1,48 @@
 {% load static %}
 
 <style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+
+    h1 {
+        color: #333;
+        text-align: center;
+    }
+
+    ul {
+        list-style-type: none;
+        padding: 0;
+    }
+
+    li {
+        margin-bottom: 10px;
+        padding: 10px;
+        background-color: #f5f5f5;
+    }
+
+    .pagination {
+        text-align: center;
+    }
+
+    .pagination ul {
+        display: inline-block;
+    }
 
     .pagination {
         display: inline-block;
     }
 
+    .pagination li {
+        display: inline;
+        margin: 0 5px;
+        background-color: transparent;
+    }
+
     .pagination a {
-        color: black;
+        color: #337ab7;
         float: left;
         padding: 8px 16px;
         text-decoration: none;
@@ -17,6 +52,7 @@
 
     .pagination a.active {
         background-color: #6d6e71;
+        font-weight: bold;
         color: white;
         border: 1px solid #6d6e71;
         padding: 0.5em 0.5em 0.5em
@@ -24,7 +60,7 @@
     }
 
     .pagination a:hover:not(.active) {
-        background-color: #ddd;
+        color: #23527c;
     }
 </style>
 
