--- a/mysite/templates/blog/pagination.html
+++ b/mysite/templates/blog/pagination.html
@@ -3,6 +3,7 @@
 <style>
     body {
         font-family: Arial, sans-serif;
+        background-color: #f5f5f5;
         margin: 0;
         padding: 0;
     }
