--- a/mysite/templates/blog/page4.html
+++ b/mysite/templates/blog/page4.html
@@ -39,6 +39,6 @@
                 <li><a href="?page=5">>>></a></li>
         </ul>
     </div>
-
+{% include 'blog/pagination.html' with page_posts=page_posts %}
 {% endblock %}
 
