--- a/mysite/templates/blog/page5.html
+++ b/mysite/templates/blog/page5.html
@@ -38,6 +38,6 @@
                 <li><a href="page5.html">5</a></li>
         </ul>
     </div>
-
+{% include 'blog/pagination.html' with page_posts=page_posts %}
 {% endblock %}
 
