--- a/mysite/templates/blog/page2.html
+++ b/mysite/templates/blog/page2.html
@@ -27,6 +27,9 @@
                 <p>Нет постов.</p>
             {% endfor %}
         </ul>
+        <div class="body_post">
+            <!-- Add any additional content within the body_post div -->
+        </div>
 
     <!-- Update the pagination links -->
     <div class="pagination">
