--- a/mysite/templates/blog/page3.html
+++ b/mysite/templates/blog/page3.html
@@ -26,7 +26,9 @@
             <p>Нет постов.</p>
         {% endfor %}
     </ul>
-
+        <div class="body_post">
+            <!-- Add any additional content within the body_post div -->
+        </div>
     <!-- Update the pagination links -->
     <div class="pagination">
         <p>Страницы:</p>
