--- a/mysite/templates/blog/post_list.html
+++ b/mysite/templates/blog/post_list.html
@@ -1,16 +1,25 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-
-        <meta charset="UTF-8">
-        <title></title>
-
+    <meta charset="UTF-8">
+    <title></title>
+    <style>
+        .body_post {
+            width: 80%;
+            height: 50vh;
+            padding: 10em;
+            margin: 0 auto;
+            box-sizing: border-box;
+            padding-bottom: 10em;
+            background-color: #ffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
-
-{% block content %}
-
+    {% block content %}
         <form method="GET">
             <label for="items_per_page">Элементов на странице:</label>
             <select id="items_per_page" name="items_per_page" onchange="this.form.submit()">
@@ -22,28 +31,33 @@
         </form>
 
         <h1>Список постов</h1>
-            <ul>
-                {% for post in page_posts %}
-                    <li>
-                        {{ post.title }} ({{ post.created_at }})
-                        <p>{{ post.content }}</p>
-                    </li>
-                {% empty %}
-                    <p>Нет постов.</p>
-                {% endfor %}
-            </ul>
-
-        <!-- показываем пагинатор -->
-    <div class="pagination">
-        <p>Страницы:</p>
         <ul>
-            <li><a href="{% url 'post_list' %}">1</a></li>
-            <li><a href="{% url 'page2' %}">Next</a></li>
-            <li><a href="{% url 'page5' %}">>>></a></li>
+            {% for post in page_posts %}
+                <li>
+                    {{ post.title }} ({{ post.created_at }})
+                    <p>{{ post.content }}</p>
+                </li>
+            {% empty %}
+                <p>Нет постов.</p>
+            {% endfor %}
         </ul>
-    </div>
-{% include 'blog/pagination.html' with page_posts=page_posts %}
-{% endblock %}
 
+        <div class="body_post">
+            <!-- Add any additional content within the body_post div -->
+        </div>
+
+        <!-- Pagination -->
+        <div class="pagination">
+            <p>Страницы:</p>
+            <ul>
+                <li><a href="{% url 'post_list' %}">1</a></li>
+                <li><a href="{% url 'page2' %}">Next</a></li>
+                <li><a href="{% url 'page5' %}">>>></a></li>
+            </ul>
+        </div>
+
+        <!-- Include pagination template -->
+        {% include 'blog/pagination.html' with page_posts=page_posts %}
+    {% endblock %}
 </body>
 </html>
