--- a/mysite/templates/blog/pagination.html
+++ b/mysite/templates/blog/pagination.html
@@ -9,6 +9,19 @@
             padding: 0;
         }
 
+         .body_post {
+            width: 80%;
+            height: 50vh;
+            padding: 10em;
+            margin: 0 auto;
+            box-sizing: border-box;
+            padding-bottom: 10em;
+            background-color: #ffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
         h1 {
             color: #333;
             text-align: center;
@@ -72,17 +85,6 @@
              padding: 0.5em 0.5em 0.5em;
              margin: 45em 0;
         }
-
-<!--        .body_post {-->
-<!--            width: 100%;-->
-<!--            min-height: 100vh;-->
-<!--            box-sizing: border-box;-->
-<!--            padding-bottom: 30em;-->
-<!--            background-color: #ff00ff;-->
-<!--            display: flex;-->
-<!--            justify-content: center;-->
-<!--            align-items: center;-->
-<!--        }-->
 
 
     </style>
