--- a/mysite/templates/blog/post_list.html
+++ b/mysite/templates/blog/post_list.html
@@ -15,7 +15,7 @@
                 <option value="5" {% if items_per_page == 5 %}selected{% endif %}>5</option>
                 <option value="10" {% if items_per_page == 10 %}selected{% endif %}>10</option>
                 <option value="20" {% if items_per_page == 20 %}selected{% endif %}>20</option>
-                <!-- Add more options as needed -->
+
             </select>
         </form>
 
@@ -32,10 +32,10 @@
         </ul>
 
         <div class="body_post">
-            <!-- Add any additional content within the body_post div -->
+
         </div>
 
-        <!-- Pagination -->
+
         <div class="pagination">
             <p>Страницы:</p>
             <ul>
@@ -43,10 +43,34 @@
                 <li><a href="{% url 'page2' %}">Next</a></li>
                 <li><a href="{% url 'page5' %}">>>></a></li>
             </ul>
+
         </div>
 
-        <!-- Include pagination template -->
+
         {% include 'blog/pagination.html' with page_posts=page_posts %}
     {% endblock %}
+
+    <div class="pagination">
+        <!-- Предыдущая страница -->
+
+        {% if page_posts.has_previous %}
+            <a href="?page={{ page_posts.previous_page_number }}">Previous</a>
+        {% endif %}
+
+        <!-- Нумерация страниц -->
+        {% for page_num in page_posts.paginator.page_range %}
+            {% if page_num == page_posts.number %}
+                <span class="current-page">{{ page_num }}</span>
+            {% else %}
+                <a href="?page={{ page_num }}">{{ page_num }}</a>
+            {% endif %}
+        {% endfor %}
+
+
+        <!-- Следующая страница -->
+        {% if page_posts.has_next %}
+            <a href="?page={{ page_posts.next_page_number }}">Next</a>
+        {% endif %}
+    </div>
 </body>
 </html>
