--- a/mysite/templates/blog/style.html
+++ b/mysite/templates/blog/style.html
@@ -9,6 +9,28 @@
             padding: 0;
         }
 
+        form {
+            margin: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #f2f2f2;
+        }
+
+        form label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        form input[type="number"] {
+            padding: 5px;
+            width: 100%;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+        }
+
          .body_post {
             width: 80%;
             height: 50vh;
