--- a/mysite/templates/blog/post_list.html
+++ b/mysite/templates/blog/post_list.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     {% block content %}
-        <h1>-- Список постов --</h1>
+        <h1>Список постов</h1>
         <ul>
             {% for post in page_posts %}
                 <li>
