--- a/mysite/templates/blog/style.html
+++ b/mysite/templates/blog/style.html
@@ -1,10 +1,11 @@
 {% load static %}
 <head>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            font-family: 'Jost', sans-serif;
+            background-color: #EDEDED;
             margin: auto;
             padding: 0;
         }
@@ -21,7 +22,7 @@
             display: block;
             margin-bottom: 5px;
             font-weight: bold;
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Jost', sans-serif;
         }
 
         form input[type="number"] {
@@ -45,10 +46,10 @@
         }
 
         h1 {
-            color: #333;
+            color: #4A75BF;
             text-align: center;
             font-weight: bold;
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Jost', Arial, sans-serif;
             text-transform: uppercase;
             text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
         }
@@ -59,13 +60,19 @@
         }
 
         li {
-            margin-bottom: 10px;
+            margin: 20px;
             padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
             background-color: #f5f5f5;
         }
 
         .pagination {
             text-align: center;
+
+
+
+
         }
 
         .pagination ul {
@@ -84,6 +91,7 @@
             padding: 8px 16px;
             text-decoration: none;
             border: 1px solid #ddd;
+            background-color: #f2f2f2;
         }
 
         .pagination a.active {
