--- a/mysite/templates/blog/post_list.html
+++ b/mysite/templates/blog/post_list.html
@@ -37,7 +37,7 @@
                        <!-- Предыдущая страница -->
         {% if page_posts.has_previous %}
             <ul>
-                <a href="?page={{ page_posts.previous_page_number }}">Previous</a>
+                <a href="?page={{ page_posts.previous_page_number }}">Назад</a>
             </ul>
         {% endif %}
 
@@ -57,7 +57,7 @@
         <!-- Следующая страница -->
         {% if page_posts.has_next %}
             <ul>
-                <a href="?page={{ page_posts.next_page_number }}">Next</a>
+                <a href="?page={{ page_posts.next_page_number }}">Далее</a>
             </ul>
         {% endif %}
     </div>
