--- a/mysite/templates/blog/style.html
+++ b/mysite/templates/blog/style.html
@@ -12,7 +12,7 @@
 
         form {
             margin: 20px;
-            padding: 10px;
+            padding: 20px;
             border: 1px solid #ccc;
             border-radius: 5px;
             background-color: #f2f2f2;
@@ -46,7 +46,7 @@
         }
 
         h1 {
-            color: #4A75BF;
+            color: #225CBF;
             text-align: center;
             font-weight: bold;
             font-family: 'Jost', Arial, sans-serif;
@@ -61,7 +61,7 @@
 
         li {
             margin: 20px;
-            padding: 10px;
+            padding: 25px;
             border: 1px solid #ccc;
             border-radius: 5px;
             background-color: #f5f5f5;
