--- a/mysite/templates/blog/style.html
+++ b/mysite/templates/blog/style.html
@@ -104,7 +104,7 @@
         }
 
         .pagination a:hover:not(.active) {
-            color: #23527c;
+            color: #CD1719;
         }
 
 
